2026-09-25 개발분 반영 - 소스 정리.